--- a/css/styles.css
+++ b/css/styles.css
@@ -76,7 +76,7 @@ nav {
 /* main banner */
 
 .main-banner {
-  background-image: url("img/mainbanner.png");
+  background-image: url("../img/mainbanner.png");
   background-position: center;
   background-size: cover;
   padding: 10em 0;
